Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-16688

cb_set_thread_name() broken on all Linux platforms

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 4.1.0
    • 4.0.0
    • memcached
    • Security Level: Public
    • Untriaged
    • Ubuntu 64-bit
    • Yes
    • KV: Oct 25 - Nov 14

    Description

      the cb_set_thread_name() function was added in 4.0 to assist in understanding memcached's behaviour by allowing all threads to be given a name.

      Unfortunately a patch to solve a SuSE build break caused it to accidentally become a no-op on Linux platforms, meaning the thread names are not reported - see http://review.couchbase.org/51711

      The issue is that cb_pthreads.c doesn't include platform/internal_config.h, so HAVE_PTHREAD_SETNAME_NP is always undefined.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            drigby Dave Rigby
            drigby Dave Rigby
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty