MB-16688: Fix cb_set_thread_name() on Linux platforms

Unfortunately a patch to solve a SuSE build break
(http://review.couchbase.org/51711) caused cb_set_thread_name to
accidentally become a no-op on Linux platforms, meaning the thread
names are not reported. The issue is that cb_pthreads.c doesn't
include platform/internal_config.h, so HAVE_PTHREAD_SETNAME_NP is
always undefined.

Fix by including the missing header file.

Change-Id: Iaeb47ee8e392697106904c3fc31798b1ae829438
Reviewed-on: http://review.couchbase.org/56557
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@gmail.com>